Added properties for supabase and fixed cors url